# astdys

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
astdys/: __init__.py  astdys.py  catalog.py  util.py
tests/: proper.cat  proper.csv  small.csv  test_astdys.py  test_real.py
